--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip":"BrothersSMP6.aternos.me","name":"TANWARYUVRAJ","port":"60112"}
+{"ip":"EmperorssSMP.aternos.me","name":"EmperorSMP","port":"61379"}
